--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "flow-bin": "^0.66.0"
+  },
+  "dependencies": {
+    "docopt": "^0.6.2"
   }
 }
